# gotosi-gtk

./: .gitignore  README.md  it.zwitterio.Gotosi.json  meson.build
data/: it.zwitterio.Gotosi.appdata.xml.in  it.zwitterio.Gotosi.desktop.in  it.zwitterio.Gotosi.gschema.xml  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: gotosi_gtk.gresource.xml  header_popover.ui  headerbar.vala  main.vala  meson.build  parse.vala  treeview.vala  window.ui  window.vala
